[gd_scene load_steps=9 format=2]

[ext_resource path="res://library/common/HitBox.tscn" type="PackedScene" id=1]
[ext_resource path="res://library/common/HealthBar.tscn" type="PackedScene" id=2]
[ext_resource path="res://library/common/HurtBox.tscn" type="PackedScene" id=3]
[ext_resource path="res://library/common/DetectBox.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/constructs/StateMachine.gd" type="Script" id=5]
[ext_resource path="res://scenes/constructs/Idle.gd" type="Script" id=6]
[ext_resource path="res://scenes/constructs/Construct.gd" type="Script" id=7]
[ext_resource path="res://library/common/SoftCollision.tscn" type="PackedScene" id=8]

[node name="Construct" type="KinematicBody2D"]
script = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="Sprite" type="Sprite" parent="."]

[node name="SoftCollision" parent="." instance=ExtResource( 8 )]
collision_layer = 32
collision_mask = 32

[node name="HealthBar" parent="." instance=ExtResource( 2 )]

[node name="HitBox" parent="." instance=ExtResource( 1 )]

[node name="HurtBox" parent="." instance=ExtResource( 3 )]

[node name="DetectBox" parent="." instance=ExtResource( 4 )]

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 5 )

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource( 6 )

[editable path="SoftCollision"]
[editable path="HitBox"]
[editable path="HurtBox"]
[editable path="DetectBox"]
